# myrss

./: .gitignore  Makefile  pyproject.toml
.run/: fastapi.run.xml
app/: exceptions.py  main.py
app/alembic/: env.py
app/alembic/versions/: 126d458ee54f_auto_202604191444.py  3c874699ee06_create_feed_tables.py  5030a9bbe712_auto_202604211540.py  65f588149709_auto_202604272058.py  89e2d5002759_auto_202604191932.py  9ae2e20696c4_auto_202604272058.py  a85e4c031e55_auto_202604252049.py  f2a8d375276d_auto_202604272115.py  f5198420ab45_auto_202604191442.py  fc0c4a75dc7b_add_source_id_for_feed.py
app/api/: response.py  route.py
app/api/endpoints/: email.py  feed.py
app/api/routes/: email.py  feed.py  feedsource.py  route.py
app/core/: config.py  enums.py
app/crud/: base.py  feed.py
app/crud/operators/: base.py  sqlite.py
app/db/: session.py
app/db/dialects/: __init__.py  base.py  sqlite.py
app/models/: base.py  crud.py  feed.py  schemas.py
app/models/statement/: base.py  sqlite.py
app/prompts/: intro.yml  summary-chunk.yml  summary.yml
app/services/: email.py  feed.py  mail.py  summary.py
app/utils/: misc.py  prompt.py
frontend/myrss/: GEMINI.md  README.md  package-lock.json  package.json  vite.config.ts
frontend/myrss/.claude/: settings.local.json
frontend/myrss/docs/: API.md  COMPONENTS.md  DEVELOPMENT.md  INDEX.md  (+3 more)
migrations/: env.py
migrations/versions/: 126d458ee54f_auto_202604191444.py  3c874699ee06_create_feed_tables.py  89e2d5002759_auto_202604191932.py  f5198420ab45_auto_202604191442.py  fc0c4a75dc7b_add_source_id_for_feed.py
(+20 files in other folders)
