[project]
name = "myrss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=5.1.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.136.0",
    "feedparser>=6.0.12",
    "html2text>=2025.4.15",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain>=1.2.15",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
    "starlette>=1.0.0",
]

[tool.ruff.lint]
ignore = ["E712"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"

